Save session Login; Add Home display horizontal pull by Month v2

--- a/app/src/main/res/layout/deal_item.xml
+++ b/app/src/main/res/layout/deal_item.xml
@@ -20,7 +20,7 @@
         android:padding="4dp">
 
         <ImageView
-            android:id="@+id/ivThumbnail"
+            android:id="@+id/ivThumbnailCategory"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:padding="8dp"
@@ -28,13 +28,13 @@
             android:src="@drawable/icon_plus" />
 
         <TextView
-            android:id="@+id/tvName"
+            android:id="@+id/tvNameCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/tvPrice"
             android:layout_toLeftOf="@+id/tvPrice"
-            android:layout_toEndOf="@+id/ivThumbnail"
-            android:layout_toRightOf="@+id/ivThumbnail"
+            android:layout_toEndOf="@+id/ivThumbnailCategory"
+            android:layout_toRightOf="@+id/ivThumbnailCategory"
             android:ellipsize="end"
             android:lines="1"
             android:text="Ăn tối"
@@ -42,17 +42,16 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tvDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvName"
+            android:layout_below="@+id/tvNameCategory"
             android:layout_toStartOf="@+id/tvPrice"
             android:layout_toLeftOf="@+id/tvPrice"
-            android:layout_toEndOf="@+id/ivThumbnail"
-            android:layout_toRightOf="@+id/ivThumbnail"
+            android:layout_toEndOf="@+id/ivThumbnailCategory"
+            android:layout_toRightOf="@+id/ivThumbnailCategory"
             android:ellipsize="end"
             android:lines="1"
-            android:text="Lâu lâu ăn lẩu tại nhà hàng cho sướng" />
+            android:text="1 giao dịch" />
 
         <TextView
             android:id="@+id/tvPrice"
@@ -72,7 +71,7 @@
         android:padding="4dp">
 
         <ImageView
-            android:id="@+id/ivThumbnail2"
+            android:id="@+id/ivThumbnailWallet"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:padding="8dp"
@@ -80,13 +79,13 @@
             android:src="@drawable/icon_plus" />
 
         <TextView
-            android:id="@+id/tvName2"
+            android:id="@+id/tvCreated"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toStartOf="@+id/tvPrice2"
             android:layout_toLeftOf="@+id/tvPrice2"
-            android:layout_toEndOf="@+id/ivThumbnail2"
-            android:layout_toRightOf="@+id/ivThumbnail2"
+            android:layout_toEndOf="@+id/ivThumbnailWallet"
+            android:layout_toRightOf="@+id/ivThumbnailWallet"
             android:ellipsize="end"
             android:lines="1"
             android:text="Ăn tối"
@@ -94,14 +93,14 @@
             android:textSize="16sp" />
 
         <TextView
-            android:id="@+id/tvDescription2"
+            android:id="@+id/tvDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/tvName2"
+            android:layout_below="@+id/tvCreated"
             android:layout_toStartOf="@+id/tvPrice2"
             android:layout_toLeftOf="@+id/tvPrice2"
-            android:layout_toEndOf="@+id/ivThumbnail2"
-            android:layout_toRightOf="@+id/ivThumbnail2"
+            android:layout_toEndOf="@+id/ivThumbnailWallet"
+            android:layout_toRightOf="@+id/ivThumbnailWallet"
             android:ellipsize="end"
             android:lines="1"
             android:text="Lâu lâu ăn lẩu tại nhà hàng cho sướng" />
@@ -113,7 +112,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:text="500,000 đ"
-            android:textColor="@color/colorPrimaryDark" />
+            android:textColor="#00aeff" />
     </RelativeLayout>
 
     </RelativeLayout>
